--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -1,20 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'users.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Hello UserController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="grix xs4 container">
+        <div class="col-xs4"><h1>Profil de {{ app.user.name }} {{ app.user.firstname }}</h1></div>
+		<div class="col-xs1">Nom</div>
+		<div class="col-xs3">{{ app.user.name }}</div>
+		<div class="col-xs1">Prenom</div>
+		<div class="col-xs3">{{ app.user.firstname }}</div>
+		<div class="col-xs1">Email</div>
+		<div class="col-xs3">{{ app.user.email }}</div>
+        <div class="col-xs4">
+            <a href="#" class="btn shadow-1 rounded-1 blue">Modifier le profil</a>
+            <a href="#" class="btn shadow-1 rounded-1 blue">Modifier le Mot de passe</a>
+        </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/sabidani/Documents/Symfony/Live Coding/Symfony_Blog_apk/src/Controller/UserController.php'|file_link(0) }}">src/Controller/UserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/sabidani/Documents/Symfony/Live Coding/Symfony_Blog_apk/templates/user/index.html.twig'|file_link(0) }}">templates/user/index.html.twig</a></code></li>
-    </ul>
-</div>
+         <div class="col-xs4">
+            <h1>Annonces de {{ app.user.name }} {{ app.user.firstname }} ({{ app.user.annonces|length }})</h1>
+        </div>
+        	{% for annonce in app.user.annonces %}
+                <div class="col-xs1">Titre :</div>
+                <div class="col-xs3">{{ annonce.title }}</div>
+            {% endfor %}
+	</div>
+
 {% endblock %}
