--- a/templates/admin/annonces/index.html.twig
+++ b/templates/admin/annonces/index.html.twig
@@ -6,7 +6,6 @@
 {% block body %}
 
 	<h1>Gestion des annonces</h1>
-	<a href="{{ path("admin_annonces_ajout") }}" class="btn shadow-1 rounded-1 blue">Ajouter un Annonce</a>
 	<div class="table-responsive">
 		<table class="table table-striped">
 			<thead>
@@ -32,12 +31,31 @@
 								<span class="form-slider"></span>
 							</label>
 						</td>
-						<td>
+						{# <td>
 							<a href="{{ path("admin_annonces_modifier", {"id": annonce.id}) }}" class="btn shadow-1 rounded-1 blue">Modifier</a>
-						</td>
+						</td> #}
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 	</div>
+{% endblock %}
+
+{% block javascript %}
+
+<script>
+    window.onload = () => {
+        let activer = document.querySelectorAll("[type=checkbox]")
+        for (let bouton of activer) {
+            bouton.addEventListener("click", function (){
+                let xmlhttp = new XMLHttpRequest;
+
+                xmlhttp.open("get", `/admin/annonces/activer/${this.dataset.id}`)
+                xmlhttp.send();
+            })
+        }
+    }
+</script>
+
+
 {% endblock %}
