--- a/templates/admin/annonces/index.html.twig
+++ b/templates/admin/annonces/index.html.twig
@@ -6,6 +6,7 @@
 {% block body %}
 
 	<h1>Gestion des annonces</h1>
+
 	<div class="table-responsive">
 		<table class="table table-striped">
 			<thead>
@@ -25,15 +26,13 @@
 						<td>{{annonce.createdAt|date}}</td>
 						<td>
 							<label class="form-switch mt-2">
-								<input type="checkbox" {{ (annonce.active) ? 'checked' : "" }}
-								data-id="{{annonce.active}}"
-								>
+								<input type="checkbox" {{ (annonce.active) ? 'checked' : "" }} data-id="{{annonce.active}}">
 								<span class="form-slider"></span>
 							</label>
 						</td>
-						{# <td>
-							<a href="{{ path("admin_annonces_modifier", {"id": annonce.id}) }}" class="btn shadow-1 rounded-1 blue">Modifier</a>
-						</td> #}
+						<td>
+							<a href="{{ path("admin_annonces_supprimer", {"id": annonce.id}) }}" class="btn shadow-1 rounded-1 blue" onclick = "return confirm('voulez vous vraiment supprimer cet article?')">Supprimer</a>
+						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -43,19 +42,21 @@
 
 {% block javascript %}
 
-<script>
-    window.onload = () => {
-        let activer = document.querySelectorAll("[type=checkbox]")
-        for (let bouton of activer) {
-            bouton.addEventListener("click", function (){
-                let xmlhttp = new XMLHttpRequest;
+	<script>
+		window.onload = () => {
+let activer = document.querySelectorAll("[type=checkbox]")
+for (let bouton of activer) {
+bouton.addEventListener("click", function () {
+let xmlhttp = new XMLHttpRequest;
 
-                xmlhttp.open("get", `/admin/annonces/activer/${this.dataset.id}`)
-                xmlhttp.send();
-            })
-        }
-    }
-</script>
+xmlhttp.open("get", `/admin/annonces/activer/${
+this.dataset.id
+}`)
+xmlhttp.send();
+})
+}
+}
+	</script>
 
 
 {% endblock %}
