Success de Resolution de la verification du password.ECHEC

--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -39,7 +39,7 @@
 		<div class="col-xs3">{{ app.user.email }}</div>
 		<div class="col-xs4">
 			<a href="{{ path("users_profil_modifier") }}" class="btn shadow-1 rounded-1 blue">Modifier le profil</a>
-			<a href="{{ path("users_verif_pass") }}" class="btn shadow-1 rounded-1 blue">Modifier le Mot de passe</a>
+			<a href="{{ path("users_pass_modifier") }}" class="btn shadow-1 rounded-1 blue">Modifier le Mot de passe</a>
 		</div>
 
 		<div class="col-xs4">
