--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -9,14 +9,17 @@
 		{% for annonce in annonces %}
 			<div class="card shadow-1 fx-row white">
 				<div class="primary d-flex vcenter fx-center p-4">
-					<img src={{ asset('uploads/annonces/' ~ annonce.images[0].name) }}
-					 alt="{{ annonce.title}}">
+					<img src="{{ asset('uploads/annonces/' ~ annonce.images[0].name) }}"
+					 height="300px" width="300px" alt="{{ annonce.title}}">
 				</div>
 				<div class="d-flex fx-col fx-grow">
-					<div class="card-header">Header</div>
+					<div class="card-header">{{ annonce.title }}</div>
 					<div class="card-content">
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							Categories: {{annonce.categories.name}}
+						</p>
+						<p>
+							{{ annonce.content|striptags|slice(0, 200) }}...
 						</p>
 					</div>
 				</div>
