Ajout button pour voir les details

--- a/templates/annonces/details.html.twig
+++ b/templates/annonces/details.html.twig
@@ -18,7 +18,7 @@
 							Categories: {{annonce.categories.name}}
 						</p>
 						<p>
-							{{ annonce.content|striptags|slice(0, 200) }}...
+							{{ annonce.content|raw }}
 						</p>
 					</div>
 				</div>
