--- a/templates/annonces/details.html.twig
+++ b/templates/annonces/details.html.twig
@@ -4,25 +4,46 @@
 {% endblock %}
 
 {% block body %}
-
+	fa
 	<div class="container">
-			<div class="card shadow-1 fx-row white">
-				<div class="primary d-flex vcenter fx-center p-4">
-					<img src="{{ asset('uploads/annonces/' ~ annonce.images[0].name) }}"
-					 height="300px" width="300px" alt="{{ annonce.title}}">
-				</div>
-				<div class="d-flex fx-col fx-grow">
-					<div class="card-header">{{ annonce.title }}</div>
-					<div class="card-content">
-						<p>
-							Categories: {{annonce.categories.name}}
-						</p>
-						<p>
-							{{ annonce.content|raw }}
-						</p>
-					</div>
+		{% for message in app.flashes("success") %}
+			{{ message }}
+		{% endfor %}
+		<div class="card shadow-1 fx-row white">
+			<div class="primary d-flex vcenter fx-center p-4">
+				<img src="{{ asset('uploads/annonces/' ~ annonce.images[0].name) }}" height="300px" width="300px" alt="{{ annonce.title}}">
+			</div>
+			<div class="d-flex fx-col fx-grow">
+				<div class="card-header">{{ annonce.title }}</div>
+				<div class="card-content">
+					<p>
+						Categories:
+						{{annonce.categories.name}}
+					</p>
+					<p>
+						{{ annonce.content|raw }}
+					</p>
 				</div>
 			</div>
-	</div>
+		</div>
+		<div class="grix xs2 sm3 gutter-0 card">
+			<div class="col xs2 col-sm3">
+				<h2>Liste des commentaires</h2>
+				{% for comment in annonce.comments %}
+					<p>Publier par
+						{{comment.nickname}}
+						le
+						{{comment.createdAt|date("m/d/Y H:i")}}</p>
+					<div>
+						{{comment.content|raw}}
+					</div>
+				{% endfor %}
+			</div>
+			<div class="col xs2 col-sm3">
+				<h2>Ajouter un commentaire</h2>
+				{{ form(commentForm) }}
+				</div>
+			</div>
+		</div>
 
-{% endblock %}
+	{% endblock %}
